@@ -3,6 +3,8 @@ grub2 (2.02-3ubuntu1) UNRELEASED; urgency=medium
   * Merge with Debian; remaining changes:
     - debian/patches/support_initrd-less_boot.patch: Added knobs to allow
       non-initrd boot config. (LP: #1640878)
+    - Disable os-prober for ppc64el on the PowerNV platform, to reduce the
+      number of entries/clutter from other OSes in Petitboot (LP: #1447500)
 
  -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Wed, 01 Nov 2017 10:53:31 -0400
 
